--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@ body {
 }
 
 #pokemon-list div {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+}
+#pokemon-list button {
+  margin-left: 10px;
 }
 
+#detalle {
+  margin-top: 20px;
+  padding: 10px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
